--- a/Challenge/HairBnB/HairBnB.ipynb
+++ b/Challenge/HairBnB/HairBnB.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d02c8a8b",
+   "id": "0e419669",
    "metadata": {},
    "source": [
     "# HairBnb\n",
@@ -263,211 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b9f73408",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[      price  extra_people  security_deposit  instant_bookable  \\\n",
-       " 700    35.0           0.0               0.0                 0   \n",
-       " 2045   66.0           0.0             100.0                 0   \n",
-       " 644    80.0           0.0               0.0                 0   \n",
-       " 2810  150.0           0.0               0.0                 0   \n",
-       " 2206   57.0           0.0               0.0                 0   \n",
-       " ...     ...           ...               ...               ...   \n",
-       " 1130   55.0           0.0               0.0                 0   \n",
-       " 1294  110.0           0.0               0.0                 0   \n",
-       " 860    58.0           0.0               0.0                 0   \n",
-       " 3507   95.0           0.0             100.0                 0   \n",
-       " 3174  103.0          20.0               0.0                 0   \n",
-       " \n",
-       "       host_total_listings_count  accommodates  bathrooms  bedrooms  beds  \\\n",
-       " 700                         1.0             1        1.0       1.0   1.0   \n",
-       " 2045                        1.0             2        1.0       1.0   1.0   \n",
-       " 644                         1.0             2        1.0       1.0   1.0   \n",
-       " 2810                        1.0             3        1.0       1.0   1.0   \n",
-       " 2206                        2.0             2        1.0       1.0   1.0   \n",
-       " ...                         ...           ...        ...       ...   ...   \n",
-       " 1130                        1.0             2        1.0       1.0   1.0   \n",
-       " 1294                        1.0             3        1.0       1.0   1.0   \n",
-       " 860                         3.0             2        1.0       1.0   1.0   \n",
-       " 3507                        1.0             4        1.0       1.0   1.0   \n",
-       " 3174                        2.0             2        1.0       0.0   1.0   \n",
-       " \n",
-       "       square_feet  ...  property_type_Treehouse  property_type_Yurt  \\\n",
-       " 700           0.0  ...                        0                   0   \n",
-       " 2045          0.0  ...                        0                   0   \n",
-       " 644           0.0  ...                        0                   0   \n",
-       " 2810          0.0  ...                        0                   0   \n",
-       " 2206          0.0  ...                        0                   0   \n",
-       " ...           ...  ...                      ...                 ...   \n",
-       " 1130          0.0  ...                        0                   0   \n",
-       " 1294          0.0  ...                        0                   0   \n",
-       " 860           0.0  ...                        0                   0   \n",
-       " 3507          0.0  ...                        0                   0   \n",
-       " 3174          0.0  ...                        0                   0   \n",
-       " \n",
-       "       room_type_Privateroom  room_type_Sharedroom  bed_type_Couch  \\\n",
-       " 700                       1                     0               0   \n",
-       " 2045                      1                     0               0   \n",
-       " 644                       1                     0               0   \n",
-       " 2810                      0                     0               0   \n",
-       " 2206                      1                     0               0   \n",
-       " ...                     ...                   ...             ...   \n",
-       " 1130                      1                     0               0   \n",
-       " 1294                      0                     0               0   \n",
-       " 860                       1                     0               0   \n",
-       " 3507                      0                     0               0   \n",
-       " 3174                      0                     0               0   \n",
-       " \n",
-       "       bed_type_Futon  bed_type_Pull-outSofa  bed_type_RealBed  \\\n",
-       " 700                0                      0                 1   \n",
-       " 2045               0                      0                 1   \n",
-       " 644                0                      0                 1   \n",
-       " 2810               0                      0                 1   \n",
-       " 2206               0                      0                 1   \n",
-       " ...              ...                    ...               ...   \n",
-       " 1130               0                      0                 1   \n",
-       " 1294               0                      0                 1   \n",
-       " 860                0                      0                 1   \n",
-       " 3507               0                      0                 1   \n",
-       " 3174               0                      0                 1   \n",
-       " \n",
-       "       cancellation_policy_moderate  cancellation_policy_strict  \n",
-       " 700                              0                           1  \n",
-       " 2045                             1                           0  \n",
-       " 644                              0                           0  \n",
-       " 2810                             1                           0  \n",
-       " 2206                             1                           0  \n",
-       " ...                            ...                         ...  \n",
-       " 1130                             0                           0  \n",
-       " 1294                             1                           0  \n",
-       " 860                              0                           0  \n",
-       " 3507                             0                           0  \n",
-       " 3174                             0                           1  \n",
-       " \n",
-       " [3054 rows x 48 columns],\n",
-       "       price  extra_people  security_deposit  instant_bookable  \\\n",
-       " 2562   55.0           0.0               0.0                 0   \n",
-       " 1425   82.0           0.0               0.0                 0   \n",
-       " 2186   68.0           0.0               0.0                 0   \n",
-       " 3494   58.0          25.0             100.0                 1   \n",
-       " 3046  130.0           0.0               0.0                 0   \n",
-       " ...     ...           ...               ...               ...   \n",
-       " 802   275.0           0.0               0.0                 0   \n",
-       " 371    95.0          25.0             300.0                 0   \n",
-       " 3131   84.0          50.0             250.0                 0   \n",
-       " 2289   90.0          15.0               0.0                 1   \n",
-       " 2246  115.0          20.0             200.0                 0   \n",
-       " \n",
-       "       host_total_listings_count  accommodates  bathrooms  bedrooms  beds  \\\n",
-       " 2562                        2.0             2        0.0       1.0   1.0   \n",
-       " 1425                        9.0             4        1.0       1.0   2.0   \n",
-       " 2186                        1.0             2        2.0       1.0   1.0   \n",
-       " 3494                        1.0             3        1.0       1.0   1.0   \n",
-       " 3046                        1.0             2        1.0       1.0   1.0   \n",
-       " ...                         ...           ...        ...       ...   ...   \n",
-       " 802                         1.0             6        1.0       2.0   3.0   \n",
-       " 371                         4.0             2        1.0       1.0   1.0   \n",
-       " 3131                        1.0             2        1.0       1.0   1.0   \n",
-       " 2289                        1.0             5        1.0       1.0   3.0   \n",
-       " 2246                        1.0             6        1.0       3.0   4.0   \n",
-       " \n",
-       "       square_feet  ...  property_type_Treehouse  property_type_Yurt  \\\n",
-       " 2562          0.0  ...                        0                   0   \n",
-       " 1425          0.0  ...                        0                   0   \n",
-       " 2186          0.0  ...                        0                   0   \n",
-       " 3494          0.0  ...                        0                   0   \n",
-       " 3046          0.0  ...                        0                   0   \n",
-       " ...           ...  ...                      ...                 ...   \n",
-       " 802           0.0  ...                        0                   0   \n",
-       " 371           0.0  ...                        0                   0   \n",
-       " 3131          0.0  ...                        0                   0   \n",
-       " 2289        550.0  ...                        0                   0   \n",
-       " 2246          0.0  ...                        0                   0   \n",
-       " \n",
-       "       room_type_Privateroom  room_type_Sharedroom  bed_type_Couch  \\\n",
-       " 2562                      1                     0               0   \n",
-       " 1425                      0                     0               0   \n",
-       " 2186                      1                     0               0   \n",
-       " 3494                      0                     0               0   \n",
-       " 3046                      0                     0               0   \n",
-       " ...                     ...                   ...             ...   \n",
-       " 802                       0                     0               0   \n",
-       " 371                       0                     0               0   \n",
-       " 3131                      0                     0               0   \n",
-       " 2289                      0                     0               0   \n",
-       " 2246                      0                     0               0   \n",
-       " \n",
-       "       bed_type_Futon  bed_type_Pull-outSofa  bed_type_RealBed  \\\n",
-       " 2562               0                      0                 1   \n",
-       " 1425               0                      0                 1   \n",
-       " 2186               0                      0                 1   \n",
-       " 3494               0                      0                 1   \n",
-       " 3046               0                      0                 1   \n",
-       " ...              ...                    ...               ...   \n",
-       " 802                0                      0                 1   \n",
-       " 371                0                      0                 1   \n",
-       " 3131               0                      0                 1   \n",
-       " 2289               0                      0                 1   \n",
-       " 2246               0                      0                 1   \n",
-       " \n",
-       "       cancellation_policy_moderate  cancellation_policy_strict  \n",
-       " 2562                             1                           0  \n",
-       " 1425                             0                           1  \n",
-       " 2186                             0                           0  \n",
-       " 3494                             0                           1  \n",
-       " 3046                             0                           1  \n",
-       " ...                            ...                         ...  \n",
-       " 802                              0                           0  \n",
-       " 371                              0                           1  \n",
-       " 3131                             1                           0  \n",
-       " 2289                             0                           1  \n",
-       " 2246                             0                           1  \n",
-       " \n",
-       " [764 rows x 48 columns],\n",
-       " 700      35.0\n",
-       " 2045     86.0\n",
-       " 644     105.0\n",
-       " 2810    190.0\n",
-       " 2206     77.0\n",
-       "         ...  \n",
-       " 1130     55.0\n",
-       " 1294    160.0\n",
-       " 860      58.0\n",
-       " 3507    130.0\n",
-       " 3174    103.0\n",
-       " Name: total_price, Length: 3054, dtype: float64,\n",
-       " 2562     70.0\n",
-       " 1425    157.0\n",
-       " 2186     98.0\n",
-       " 3494    103.0\n",
-       " 3046    220.0\n",
-       "         ...  \n",
-       " 802     350.0\n",
-       " 371     170.0\n",
-       " 3131    145.0\n",
-       " 2289    150.0\n",
-       " 2246    140.0\n",
-       " Name: total_price, Length: 764, dtype: float64]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X, y = cdf_list.drop(columns=['total_price']), cdf_list.total_price\n",
-    "#x_train_scaled, x_test_scaled = scale_datasets(X_train, x_test)\n",
-    "train_test_split(X, y, test_size = 0.2, random_state = 42)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "d34c6048",
    "metadata": {},
    "outputs": [
@@ -480,6 +276,9 @@
     }
    ],
    "source": [
+    "# seperate our predictors from the target\n",
+    "X, y = cdf_list.drop(columns=['total_price']), cdf_list.total_price\n",
+    "\n",
     "# split ratios\n",
     "train_ratio = 0.80\n",
     "validation_ratio = 0.10\n",
@@ -793,16 +592,6 @@
     "    optimizer=Adam(learning_rate=learning_rate), \n",
     "    metrics=[msle]\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "335223a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model.summary()"
    ]
   },
   {
