minor comment fixes

--- a/Challenge/MnistMeat/MnistMeat.ipynb
+++ b/Challenge/MnistMeat/MnistMeat.ipynb
@@ -457,7 +457,7 @@
    "id": "0cfb454e-f1df-4688-afc3-a8b80d507b3e",
    "metadata": {},
    "source": [
-    "We can see that we don't have a even distribution.  Let's split out data such that our training and validation data are balanced.  We'll leave an imbalance in the test set since we aren't using that during training."
+    "We can see that we don't have a even distribution.  Let's split out data such that our training and validation data are balanced."
    ]
   },
   {
@@ -563,35 +563,6 @@
     "\n",
     "a,b= np.unique(y_train, return_counts=True)\n",
     "plt.bar(a, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "9135067b-236e-4465-9b25-b72ca41e273f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' # keep it simple\\n# Balance validate\\ndrop_list = get_droplist(x_validate, y_validate)\\nx_validate = np.delete(x_validate, list(drop_list),0)\\ny_validate = np.delete(y_validate, list(drop_list),0)\\n\\na,b= np.unique(y_validate, return_counts=True)\\nplt.bar(a, b)\\n'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "''' # keep it simple\n",
-    "# Balance validate\n",
-    "drop_list = get_droplist(x_validate, y_validate)\n",
-    "x_validate = np.delete(x_validate, list(drop_list),0)\n",
-    "y_validate = np.delete(y_validate, list(drop_list),0)\n",
-    "\n",
-    "a,b= np.unique(y_validate, return_counts=True)\n",
-    "plt.bar(a, b)\n",
-    "'''"
    ]
   },
   {
@@ -824,7 +795,7 @@
    "id": "2e49478b-bc50-4cf8-9afc-45178199faad",
    "metadata": {},
    "source": [
-    "# **Evaluate the trained model**"
+    "'# **Evaluate the trained model**"
    ]
   },
   {
